--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Basketball Stats</title>
+    <title>NBA Legends Stats</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
