--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Basketball Stats</h1>
+    <h1>Round 9</h1>
 
     <div class="container">
         <table id="stats-table">
